# Chip-8-Emulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: build-setup.cmake
include/chip_8/: chip_8.hpp  chip_state.hpp  decoder.hpp  display.hpp  error.hpp  frontend.hpp  instruction_set.hpp  key_map.hpp  keyboard.hpp  keys.hpp  memory.hpp  registers.hpp  utility.hpp
src/: chip_8.cpp  instruction_set.cpp  main.cpp
src/chip_8/: chip_8.cpp  instruction_set.cpp
test/: CMakeLists.txt  test.cpp
test/include/test/: instruction_set.hpp
